aoc-star/tests/ui/star_invalid_args.rs
use aoc_star::star;

#[star(day = "1", part = 2)]
fn bad(s: String) -> String {
    s
}

fn main() {
    ()
}
